@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2004/11/27 20:27:07 jdolecek Exp $
+
+SHA1 (qca-tls-1.0.tar.bz2) = 775e764c5be342048eba11dae5c5fd3b636d23c5
+Size (qca-tls-1.0.tar.bz2) = 23489 bytes
